<resources>
    <string name="app_name">WateringFromTwitter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_plant_status">Plant Status</string>
    <string name="button_change_thresholds">Change Thresholds</string>
    <string name="button_change_plant">Change Plant</string>

    <string name="label_actuator_active">Active:</string>
    <string name="label_force">Force active?</string>
    <string name="label_luminosity">Luminosity (lx):</string>
    <string name="label_temperature">Temperature (ºC):</string>
    <string name="label_humidity">Humidity (%):</string>
    <string name="label_thresholds">Thresholds</string>
    <string name="label_current">Current</string>
    <string name="label_upper">Upper</string>
    <string name="label_lower">Lower</string>
    <string name="label_change_to">Change to</string>
    <string name="hint_new_threshold">New Threshold</string>
    <string name="hint_plant_name">Plant Name</string>

    <string name="error_invalid_threshold">ERROR: Invalid threshold value(s), must be numeric</string>
    <string name="error_invalid_plant_name">ERROR: Unknown plant name</string>
    <string name="loading">Loading...</string>
</resources>